# ahocorasick

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod
ahocorasick/: BUILD.bazel  ahocorasick.go  ahocorasick_test.go
