load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ahocorasick",
    srcs = ["ahocorasick.go"],
    importpath = "github.com/pedroegsilva/ahocorasick/ahocorasick",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ahocorasick_test",
    srcs = ["ahocorasick_test.go"],
    embed = [":ahocorasick"],
    deps = ["@com_github_stretchr_testify//assert"],
)
